# xfce4-screensaver

./: .clang-format  .cppcheck-false-positives  .cppcheck.cfg  .gitignore  AUTHORS  CPPLINT.cfg  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/: issue_template.md
.tx/: config
build-aux/: Makefile.am
build-aux/bsdauth/: test-build.c
build-aux/pam/: test-pam-strerror-1.c  test-pam-strerror-2.c
build-aux/pwent/: test-dec-shadow-passwd.c  test-generic-shadow-passwd.c  test-hp-shadow-passwd.c  test-sun-shadow-passwd.c
data/: Makefile.am  lock-dialog-default.ui  meson.build  org.mate.ScreenSaver.service.in  org.xfce.ScreenSaver.desktop.in  org.xfce.ScreenSaver.service.in  org.xfce.background.gschema.xml.in  org.xfce.lockdown.gschema.xml.in  org.xfce.peripherals-keyboard-xkb.gschema.xml.in  org.xfce.screensaver.gschema.xml.in  org.xfce.session.gschema.xml.in  xfce4-screensaver  xfce4-screensaver-command.1  xfce4-screensaver-preferences.1  xfce4-screensaver-preferences.desktop.in  xfce4-screensaver-preferences.ui  xfce4-screensaver.1  xfce4-screensaver.common-auth  xfce4-screensaver.directory.desktop.in  xfce4-screensaver.directory.in  xfce4-screensaver.pc.in  xfce4-screensaver.system-auth  xfce4-screensavers.menu  xscreensaver-config.xsl
data/icons/: Makefile.am  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/images/: Makefile.am  meson.build
data/images/cosmos/: Makefile.am  cosmos.xml.in.in
doc/: Makefile.am  dbus-interface.xml  docbook.css  meson.build  xfce4-screensaver.xml.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  es_AR.po  es_CO.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  (+62 more)
protocols/: Makefile.am  meson.build
savers/: Makefile.am  cosmos-slideshow.desktop.in.in  floaters.c  footlogo-floaters.desktop.in.in  gnomelogo-floaters.desktop.in.in  gs-theme-engine.c  gs-theme-engine.h  gs-theme-window.c  gs-theme-window.h  gste-popsquares.c  gste-popsquares.h  gste-slideshow.c  gste-slideshow.h  meson.build  popsquares.c  slideshow.c  xdg-user-dir-lookup.c  xdg-user-dir-lookup.h  xfce-floaters.desktop.in.in  xfce-personal-slideshow.desktop.in.in  xfce-popsquares.desktop.in.in
src/: Makefile.am  copy-theme-dialog.c  copy-theme-dialog.h  debug-screensaver.sh  desktop-entries.c  desktop-entries.h  gs-auth-bsdauth.c  gs-auth-helper.c  gs-auth-pam.c  gs-auth-pwent.c  gs-auth.h  gs-debug.c  gs-debug.h  gs-fade.c  gs-fade.h  gs-grab-x11.c  gs-grab.c  gs-grab.h  gs-job.c  gs-job.h  gs-listener-dbus.c  gs-listener-dbus.h  gs-listener-wayland.c  gs-listener-wayland.h  gs-listener-x11.c  gs-listener-x11.h  gs-listener.c  gs-listener.h  gs-lock-plug.c  gs-lock-plug.h  gs-manager.c  gs-manager.h  gs-monitor.c  gs-monitor.h  gs-prefs.c  gs-prefs.h  gs-session-lock-manager.c  gs-session-lock-manager.h  gs-theme-manager.c  gs-theme-manager.h  (+62 more)
